tests/fails/defer1.t
bar = macro(function() return 2 end)
terra foo()
    defer bar()
end
foo()